[project]
name = "toxicity-detector"
version = "1.0.0"
description = "A simple toxicity detector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "optimum[onnxruntime]>=1.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["toxicity_detector"]

[tool.setuptools.package-data]
"toxicity_detector" = ["resources/vocab.json", "resources/toxicity-model.pt"]
